--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "thinkbox_stl_volume_calculator",
+  "name": "thinkbox-stl-volume-calculator",
   "version": "0.1.0",
   "description": "Volume calculator for use at think[box]",
   "author": "Paul Nettleton",
-  "main": "main.js",
+  "license": "LicenseRef-LICENSE",
+  "main": "src/main.js",
   "dependencies": {
+    "electron-compile": "^6.4.2",
+    "electron-squirrel-startup": "^1.0.0",
     "mathjs": "^3.16.4",
     "parse-stl": "^1.0.2",
     "stl": "^1.1.1",
@@ -17,10 +20,45 @@
     }
   },
   "scripts": {
-    "pack": "electron-builder --dir",
-    "dist": "electron-builder"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "devDependencies": {
-    "electron-builder": "^19.33.0"
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "electron-forge": "^4.1.2",
+    "electron-prebuilt-compile": "1.7.8"
+  },
+  "config": {
+    "forge": {
+      "make_targets": {
+        "win32": [
+          "squirrel"
+        ],
+        "darwin": [
+          "zip",
+          "dmg"
+        ],
+        "linux": [
+          "deb",
+          "rpm"
+        ]
+      },
+      "electronPackagerConfig": {},
+      "electronWinstallerConfig": {
+        "name": ""
+      },
+      "electronInstallerDebian": {},
+      "electronInstallerRedhat": {},
+      "github_repository": {
+        "owner": "",
+        "name": ""
+      },
+      "windowsStoreConfig": {
+        "packageName": ""
+      }
+    }
   }
 }
