--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "parse-stl": "^1.0.2",
     "stl": "^1.1.1",
     "stl-reader": "^3.0.1",
-    "three": "^0.87.1"
+    "three": "^0.87.1",
+    "three-orbit-controls": "^82.1.0",
+    "three-stl-loader": "^1.0.6"
   },
   "build": {
     "appId": "com.firebird.${name}",
